manifests/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: infra
  labels:
    app: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      nodeSelector:
        teacherservices.cloud/node_pool: applications
        kubernetes.io/os: linux
      containers:
      - name: http-echo
        image: mendhak/http-https-echo:31
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 64M
            cpu: 0.1
          limits:
            memory: 64M
            cpu: 1
