manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: infra
spec:
  selector:
    app: http-echo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
