manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
  - host: http-echo.test.teacherservices.cloud
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: http-echo
            port:
              number: 8080
